@@ -1,25 +1,41 @@
 import { LoggerInterface, SharedLoggerInterface } from 'clui-logger';
-import { TfsConfig } from '../common/config';
+import { TfsConfig, TfsConfigFormat } from '../common/config';
+import { ConsoleBackend, FilterBackend, MultiBackend, SharedLogger } from 'clui-logger';
+import { TIMESTAMP_SHORT } from 'clui-logger/lib/Backends/ConsoleBackend';
+import { Config } from '@gallant/config';
 import yargs from 'yargs';
 
 export abstract class Command {
-    readonly logger: LoggerInterface;
+    logger: LoggerInterface | null = null;
 
-    readonly config: TfsConfig;
+    config: TfsConfig | null = null;
 
     abstract readonly name : string;
 
     abstract readonly usage : string;
 
-    public constructor(logger: LoggerInterface | SharedLoggerInterface, config : TfsConfig) {
-        this.logger = logger.service(this.constructor.name);
-        this.config = config;
-    }
-
+    public constructor() {}
 
     public register( yargv : yargs.Argv ) : yargs.Argv {
         return yargv.command( this.name, this.usage, this.configure.bind(this), (argv) => {
-            this.run(argv).catch(err => this!.logger.error(err.message + '\n' + (err.stack ?? '')));
+
+            // Load configuration file from the current working directory
+            const config: TfsConfig = Config.load((argv.config as string) || 'config.kdl', TfsConfigFormat).data;
+
+            // Configure Logger
+            const logger = new SharedLogger(new MultiBackend([
+                new FilterBackend(
+                    new ConsoleBackend(TIMESTAMP_SHORT),
+                    config.debug ? [">=debug"] : [">=info"]
+                ),
+                // Enable logging to a file
+                // new FileBackend( this.storage.getPath( 'logs', 'app-:YYYY-:MM-:DD.log' ) ),
+            ]));
+
+            this.config = config;
+            this.logger = logger.service(this.constructor.name)
+
+            this.run(argv).catch(err => this.logger!.error(err.message + '\n' + (err.stack ?? '')));
         } );
     }
 
